--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -1,89 +1,226 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#636363"
-    tools:context=".MapFragment">
+    android:id="@+id/main"
+    android:background="@drawable/maket_punk"
+    tools:context=".MapFragment"
+    android:layout_height="match_parent">
 
-
-    <ImageView
-        android:id="@+id/map"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="punk_map"
-        android:scaleType="fitXY"
-        android:src="@drawable/punk"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="16dp" />
-
-    <ImageView
-        android:id="@+id/imageView2"
+    <ImageButton
+        android:id="@+id/profile"
         android:layout_width="78dp"
         android:layout_height="78dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:background="@drawable/avatar"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/imageButton23"
+        android:layout_width="77dp"
+        android:layout_height="101dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginBottom="156dp"
+        android:background="@android:color/transparent"
+        android:rotation="-45"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/dorm20" />
+
+    <ImageButton
+        android:id="@+id/imageButton22"
+        android:layout_width="76dp"
+        android:layout_height="98dp"
         android:layout_marginStart="16dp"
+        android:layout_marginBottom="296dp"
+        android:background="@android:color/transparent"
+        android:rotation="-2"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/dorm20" />
+
+    <ImageButton
+        android:id="@+id/imageButton20"
+        android:layout_width="76dp"
+        android:layout_height="98dp"
+        android:layout_marginStart="52dp"
+        android:layout_marginTop="200dp"
+        android:background="@android:color/transparent"
+        android:rotation="48"
+        android:scaleType="fitXY"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/dorm20" />
+
+    <ImageButton
+        android:id="@+id/imageButton21"
+        android:layout_width="76dp"
+        android:layout_height="98dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="332dp"
+        android:background="@android:color/transparent"
+        android:rotation="2"
+        android:scaleType="fitXY"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/dorm20" />
+
+    <ImageButton
+        android:id="@+id/imageButton15"
+        android:layout_width="94dp"
+        android:layout_height="82dp"
+        android:layout_marginTop="412dp"
+        android:background="@android:color/transparent"
+        android:rotationY="180"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/dorm12" />
+
+    <ImageButton
+        android:id="@+id/imageButton16"
+        android:layout_width="90dp"
+        android:layout_height="81dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="256dp"
+        android:background="@android:color/transparent"
+        android:rotation="-46"
+        android:rotationY="180"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/dorm12" />
+
+    <ImageButton
+        android:id="@+id/imageButton14"
+        android:layout_width="94dp"
+        android:layout_height="82dp"
+        android:layout_marginTop="268dp"
+        android:layout_marginEnd="36dp"
+        android:background="@android:color/transparent"
+        android:rotation="50"
+        android:rotationY="180"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/dorm12" />
+
+    <ImageButton
+        android:id="@+id/imageButton12"
+        android:layout_width="94dp"
+        android:layout_height="82dp"
+        android:layout_marginStart="108dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.515"
+        app:srcCompat="@drawable/dorm12" />
+
+    <ImageButton
+        android:id="@+id/imageButton13"
+        android:layout_width="90dp"
+        android:layout_height="76dp"
+        android:layout_marginStart="144dp"
+        android:layout_marginBottom="264dp"
+        android:background="@android:color/transparent"
+        android:rotation="-56"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/dorm12" />
+
+    <ImageButton
+        android:id="@+id/imageButton10"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="132dp"
+        android:layout_marginTop="268dp"
+
+        android:background="@android:color/transparent"
+        android:rotation="50"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/dorm12" />
+
+    <ImageButton
+        android:id="@+id/imageButtonShaiba"
+        android:layout_width="91dp"
+        android:layout_height="132dp"
+        android:layout_marginBottom="64dp"
+        android:background="@android:color/transparent"
+        android:rotation="-2"
+        android:scaleType="fitXY"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.671"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/shaiba" />
+
+    <ImageButton
+        android:id="@+id/imageButtonClumba"
+        android:layout_width="93dp"
+        android:layout_height="104dp"
+        android:layout_marginTop="396dp"
+        android:background="@android:color/transparent"
+        android:scaleType="fitXY"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.669"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/clumba" />
+
+    <ImageButton
+        android:id="@+id/imageButtonPool"
+        android:layout_width="61dp"
+        android:layout_height="101dp"
+        android:layout_marginStart="108dp"
+        android:layout_marginTop="92dp"
+        android:background="@android:color/transparent"
+        android:rotation="-1"
+        android:scaleType="fitXY"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/pool" />
+
+    <Button
+        android:id="@+id/buttonOut"
+        android:layout_width="219dp"
+        android:layout_height="41dp"
+
         android:layout_marginTop="16dp"
-        android:background="@drawable/roundcourner"
-        android:src="@drawable/avatar"
+        android:backgroundTint="#f674b0"
+        android:text="Вне ПУНКа"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.755"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button_shaiba"
-        android:layout_width="103dp"
-        android:layout_height="78dp"
-        android:background="#00FFFFFF"
-        android:text="Шайба"
-        android:textColor="#000000"
-        android:textSize="16sp"
+        android:id="@+id/buttonRightField"
+        android:layout_width="46dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="68dp"
+        android:layout_marginBottom="204dp"
+        android:backgroundTint="#f674b0"
+        android:rotation="+56"
+        android:rotationY="2"
+        android:text="Button"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.451"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.836" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/button_12"
-        android:layout_width="75dp"
-        android:layout_height="67dp"
-        android:layout_marginTop="356dp"
-
-        android:backgroundTint="#00FFFFFF"
-        android:text="12"
-        android:textColor="#000000"
-        android:textColorHighlight="#000000"
-        android:textColorHint="#000000"
-        android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.394"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="114dp"
-        android:layout_height="214dp"
-        android:backgroundTint="#00C9C1C1"
-        android:text="клумба"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        tools:layout_editor_absoluteX="193dp"
-        tools:layout_editor_absoluteY="352dp" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="156dp"
-        android:layout_height="204dp"
-        android:backgroundTint="#00FFFFFF"
-        android:text="Выездные"
-        android:textColor="#000000"
-        android:textSize="16sp"
-        tools:layout_editor_absoluteX="242dp"
-        tools:layout_editor_absoluteY="103dp" />
+        android:id="@+id/buttonLeftField"
+        android:layout_width="46dp"
+        android:layout_height="35dp"
+        android:layout_marginEnd="64dp"
+        android:layout_marginBottom="204dp"
+        android:backgroundTint="#f674b0"
+        android:rotation="-56"
+        android:rotationY="2"
+        android:text="Button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/buttonRightField" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
