--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -41,10 +41,11 @@
         android:id="@+id/textView3"
         android:layout_width="161dp"
         android:layout_height="22dp"
+        android:layout_marginStart="28dp"
         android:text="Cialyni"
         android:textStyle="italic"
-        app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:layout_editor_absoluteX="28dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView4"
@@ -74,9 +75,12 @@
         android:layout_width="202dp"
         android:layout_height="38dp"
 
-        android:text="Посещенные активности"
-        tools:layout_editor_absoluteX="104dp"
-        tools:layout_editor_absoluteY="491dp" />
+        android:layout_marginBottom="288dp"
+        android:text="Запланированные активности"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <HorizontalScrollView
         android:id="@+id/horizontalScrollView"
@@ -98,7 +102,7 @@
         android:layout_width="277dp"
         android:layout_height="21dp"
         android:layout_marginTop="316dp"
-        android:text="Друзья (контейнер horizontalScrollView)"
+        android:text="Друзья"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
